test/tests/nek_errors/invalid_field/pyramid.par
[OCCA]
  backend = CPU

[GENERAL]
  stopAt = numSteps
  numSteps = 1
  dt = 5.0e-4
  polynomialOrder = 2
  checkpointControl = steps
  checkpointInterval = 2

[FLUID VELOCITY]
  solver = none
  viscosity = 1.0
  density = 1.0
  residualTol = 1.0e-6
  boundaryTypeMap = inlet, outlet, wall, wall, wall, wall, wall, wall

[FLUID PRESSURE]
  residualTol = 1.0e-5
